@@ -1,13 +1,6 @@
 #include <sys/types.h>
 #include <sys/stat.h>
-#include <utmp.h>
-#ifndef UTMP_FILE
-#ifdef _PATH_UTMP
-#define UTMP_FILE _PATH_UTMP
-#else
-#define UTMP_FILE "/etc/utmp"
-#endif
-#endif
+#include "qtmp.h"
 #include "readwrite.h"
 #include "stralloc.h"
 #include "substdio.h"
@@ -20,15 +13,12 @@
 #include "env.h"
 #include "exit.h"
 
-substdio ssutmp;
-char bufutmp[sizeof(struct utmp) * 16];
-int fdutmp;
 substdio sstty;
 char buftty[1024];
 int fdtty;
 
-struct utmp ut;
-char line[sizeof(ut.ut_line) + 1];
+UTMP_INIT;
+char line[sizeof(ut->ut_line) + 1];
 stralloc woof = {0};
 stralloc tofrom = {0};
 stralloc text = {0};
@@ -63,7 +53,7 @@ void main()
  if (!(user = env_get("USER"))) _exit(0);
  if (!(sender = env_get("SENDER"))) _exit(0);
  if (!(userext = env_get("LOCAL"))) _exit(0);
- if (str_len(user) > sizeof(ut.ut_name)) _exit(0);
+ if (str_len(user) > sizeof(ut->UTMP_USER)) _exit(0);
 
  if (!stralloc_copys(&tofrom,"*** TO <")) _exit(0);
  if (!stralloc_cats(&tofrom,userext)) _exit(0);
@@ -88,15 +78,13 @@ void main()
  if (!stralloc_cat(&woof,&text)) _exit(0);
  if (!stralloc_cats(&woof,"\015\n")) _exit(0);
 
- fdutmp = open_read(UTMP_FILE);
- if (fdutmp == -1) _exit(0);
- substdio_fdbuf(&ssutmp,read,fdutmp,bufutmp,sizeof(bufutmp));
+ UTMP_OPEN;
 
- while (substdio_get(&ssutmp,&ut,sizeof(ut)) == sizeof(ut))
-   if (!str_diffn(ut.ut_name,user,sizeof(ut.ut_name)))
+ while (UTMP_READ_MORE)
+   if (UTMP_TYPE_MATCHES && !str_diffn(ut->UTMP_USER,user,sizeof(ut->UTMP_USER)))
     {
-     byte_copy(line,sizeof(ut.ut_line),ut.ut_line);
-     line[sizeof(ut.ut_line)] = 0;
+     byte_copy(line,sizeof(ut->ut_line),ut->ut_line);
+     line[sizeof(ut->ut_line)] = 0;
      if (line[0] == '/') continue;
      if (!line[0]) continue;
      if (line[str_chr(line,'.')]) continue;
